--- a/salespulse/pubspec.yaml
+++ b/salespulse/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   open_file: ^3.5.10
   url_launcher: ^6.3.2
   syncfusion_flutter_charts: ^30.1.39 # ou la dernière version
+  iconsax: ^0.0.8
  
   
 
